- Fixed square align on mobile devices

--- a/src/assets/sass/responsive.scss
+++ b/src/assets/sass/responsive.scss
@@ -51,7 +51,7 @@
         width: 85vw;
         height: 85vw;
         top: -40vw;
-        left: 8.4%;
+        left: 10%;
     }
     h1{
         text-align: center;
